remove marking android as "worse" than desktop/ios/...

--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -12,9 +12,8 @@ We keep talking about each one only briefly because there are so many :)
 
 ![Select reactions to chat message](../assets/blog/desktop-reactions.png)
 
-Desktop, iOS and UbuntuTouch apps can now send arbitrary reactions 
-on chat messages and surpassed Android support 
-which only offers a default set of reactions to send. 
+Android, Desktop, iOS and UbuntuTouch (!) users can now send 
+and display reactions on chat messages. 
 Fun fact: we use the IETF [RFC9078](https://www.ietf.org/rfc/rfc9078.html) 
 experimental standard for transmitting reactions in e-mail. 
 See [Delta Chat standards](https://github.com/deltachat/deltachat-core-rust/blob/main/standards.md)
