mention that iOS also saw other notification improvements

--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -32,6 +32,8 @@ only available if you are using a chatmail address,
 as provided by three independent entities currently: 
 [nine.testrun.org](https://nine.testrun.org),
 [mailchat.pl](https://mailchat.pl) or [mehl.cloud](https://mehl.cloud)
+The new release also improves notification handling for non-chatmail addresses
+but instant notifications are generally not available there. 
 
 
 ## New Desktop Multi-account sidebar
