add Ubuntu Touch section so that the screenshot fits but is not too prominent at the top

--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -12,7 +12,7 @@ We keep talking about each one only briefly because there are so many :)
 
 ![Select reactions to chat message](../assets/blog/desktop-reactions.png)
 
-Android, Desktop, iOS and UbuntuTouch (!) users can now send 
+Android, Desktop, iOS and UbuntuTouch users can now send 
 and display reactions on chat messages. 
 Fun fact: we use the IETF [RFC9078](https://www.ietf.org/rfc/rfc9078.html) 
 experimental standard for transmitting reactions in e-mail. 
@@ -31,7 +31,7 @@ Note that instant message delivery is currently
 only available if you are using a chatmail address,
 as provided by three independent entities currently: 
 [nine.testrun.org](https://nine.testrun.org),
-[mailchat.pl](https://mailchat.pl) or [mehl.cloud](https://mehl.cloud)
+[mailchat.pl](https://mailchat.pl) or [mehl.cloud](https://mehl.cloud).
 The new release also improves notification handling for non-chatmail addresses
 but instant notifications are generally not available there. 
 
@@ -75,6 +75,14 @@ Statistics are generated as a text message which you send yourself
 to the [collection bot](https://github.com/deltachat/self_reporting_bot/blob/main/self_reporting_bot.py) using guaranteed end-to-end encryption. 
 No personally identifable data remains as your statistics reporting message 
 is removed on the collection-side after processing. 
+
+## Ubuntu Touch also supports reactions and uses latest Rust core library
+
+![Ubuntu touch reactions](../assets/blog/2024-03-11-deltatouch-reactions.png)
+
+[Delta Touch](https://delta.chat/en/2023-07-02-deltatouch) also introduced 
+reactions and uses the latest [Delta Chat core Rust](https://github.com/deltachat/deltachat-core-rust/) that underlies the networking, encryption, contact and chat management 
+of all Delta chat apps. 
 
 # Other useful improvements with 1.44 
  
