--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -82,7 +82,7 @@ is removed on the collection-side after processing.
 
 [Delta Touch](https://delta.chat/en/2023-07-02-deltatouch) also introduced 
 reactions and uses the latest [Delta Chat core Rust](https://github.com/deltachat/deltachat-core-rust/) that underlies the networking, encryption, contact and chat management 
-of all Delta chat apps. 
+of all Delta Chat apps. 
 
 # Other useful improvements with 1.44 
  
