--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -1,5 +1,5 @@
 ---
-title: Reactions, iOS Push Notifications and so much more!
+title: Reactions, iOS Push Notifications and much more!
 author: holga, r10s, simon
 image: ../assets/blog/notiheart.png
 ---
