use png for desktop sidebar screenshot

--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -38,7 +38,7 @@ but instant notifications are generally not available there.
 
 ## New Desktop Multi-account sidebar
 
-![Desktop multi-account sidebar](../assets/blog/desktop-sidebar.jpg)
+![Desktop multi-account sidebar](../assets/blog/desktop-sidebar.png)
 
 The Desktop apps on all platforms now have a sidebar
 that shows and allows to select all your accounts,
