--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -81,7 +81,7 @@ is removed on the collection-side after processing.
 ![Ubuntu touch reactions](../assets/blog/2024-03-11-deltatouch-reactions.png)
 
 [Delta Touch](https://delta.chat/en/2023-07-02-deltatouch) also introduced 
-reactions and uses the latest [Delta Chat core Rust](https://github.com/deltachat/deltachat-core-rust/) that underlies the networking, encryption, contact and chat management 
+reactions and uses the latest [Delta Chat core](https://github.com/deltachat/deltachat-core-rust/) that underlies the networking, encryption, contact and chat management 
 of all Delta Chat apps. 
 
 # Other useful improvements with 1.44 
