--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -104,6 +104,7 @@ For complete lists of changes see:
 - [Android changes](https://github.com/deltachat/deltachat-android/blob/master/CHANGELOG.md) 
 - [iOS changes](https://github.com/deltachat/deltachat-ios/blob/master/CHANGELOG.md) 
 - [Core Rust changes](https://github.com/deltachat/deltachat-core-rust/blob/main/CHANGELOG.md) 
+- [Ubuntu Touch changes](https://codeberg.org/lk108/deltatouch/src/branch/main/CHANGELOG)
 
 Please report any further bugs or issues to [the forum](https://support.delta.chat) 
 or on our [core Rust issue tracker](https://github.com/deltachat/deltachat-core-rust/issues).
