--- a/_posts/2024-03-12-jumbo44.md
+++ b/_posts/2024-03-12-jumbo44.md
@@ -65,16 +65,17 @@ if you are standing next to each other.
 
 ![Submit encryption statistics to developers](../assets/blog/self-reporting-statistics.jpg)
 
-Android has a new "Send statistics to Delta Chat's developers" option
-which performs some encryption related statistics in order to ensure
-we weed out and prevent any unneccessary "failed to decrypt" style messages. 
-Guaranteed end-to-end encryption should "just work" 
-and also not cause any troubles with multi-device usage. 
-You can help by going to "Send statistics" options in "Advanced settings". 
-Statistics are generated as a text message which you send yourself 
+Android allows to send statistics to developers in order to ensure
+we weed out and prevent unneccessary "failed to decrypt" style messages. 
+We want guaranteed end-to-end encryption to reliably work 
+and not cause any troubles also with multi-device usage. 
+Please help by going to "Advanced Settings" and then 
+"Send statistics to Delta Chat's developers".
+Statistics are generated as a text message which you may review and send yourself 
 to the [collection bot](https://github.com/deltachat/self_reporting_bot/blob/main/self_reporting_bot.py) using guaranteed end-to-end encryption. 
-No personally identifable data remains as your statistics reporting message 
-is removed on the collection-side after processing. 
+No personally identifable data is kept because 
+the collection bot removes the statistics message 
+and thereby the relation to your e-mail address. 
 
 ## Ubuntu Touch also supports reactions and uses latest Rust core library
 
