--- a/_posts/2024-03-12-jumbo44.md
+++ b/_posts/2024-03-12-jumbo44.md
@@ -1,7 +1,7 @@
 ---
 title: Reactions, iOS Push Notifications and much more!
 author: holga, r10s, simon
-image: ../assets/blog/notiheart.png
+image: ../assets/blog/2024-03-notiheart.png
 ---
 
 The 1.44 releases on all stores and platforms bring
