--- a/_posts/2024-03-12-jumbo44.md
+++ b/_posts/2024-03-12-jumbo44.md
@@ -1,12 +1,14 @@
 ---
-title: Reactions, iOS Push Notifications and much more!
+title: A major upgrade on Delta Chat user experiences 
 author: holga, r10s, simon
 image: ../assets/blog/2024-03-notiheart.png
 ---
 
-The 1.44 releases on all stores and platforms bring
-several often-requested improvements.
-We keep talking about each one only briefly because there are so many :) 
+The 1.44 releases on all stores and platforms deliver 
+several popularly requested usability improvements.
+We only mention each one briefly because there are so many.
+Visit [get.delta.chat](https://get.delta.chat) to onboard 
+anyone instantly, without them needing an e-mail address first!
 
 ## Reactions ❤️  now supported on all platforms 
 
