playing with the title

--- a/_posts/2024-03-12-jumbo44.md
+++ b/_posts/2024-03-12-jumbo44.md
@@ -1,5 +1,5 @@
 ---
-title: A major upgrade on Delta Chat user experiences 
+title: Reactions, iOS Push notifications and other UX upgrades 
 author: holga, r10s, simon
 image: ../assets/blog/2024-03-notiheart.png
 ---
