--- a/_posts/2024-03-12-jumbo44.md
+++ b/_posts/2024-03-12-jumbo44.md
@@ -50,7 +50,7 @@ We also fixed many issues, including the Flathub release (which crashed when rec
 
 ## Invite links for getting in contact 
 
-![Invite link in Whatsapp](../assets/blog/desktop-invite-link-show.jpg)
+<img src="../assets/blog/desktop-invite-link-show.jpg" width="320" />
 
 You can now send invite links via any other messenger 
 or social media DM channel. 
