streamlining beginning and some sections

--- a/_posts/2024-03-12-jumbo44.md
+++ b/_posts/2024-03-12-jumbo44.md
@@ -1,16 +1,19 @@
 ---
-title: Reactions, iOS Push notifications and other UX upgrades 
+title: Four major usability improvements in Delta Chat 1.44 
 author: holga, r10s, simon
 image: ../assets/blog/2024-03-notiheart.png
 ---
 
-The 1.44 releases on all stores and platforms deliver 
-several popularly requested usability improvements.
-We only mention each one briefly because there are so many.
-Visit [get.delta.chat](https://get.delta.chat) to onboard 
-anyone instantly, without them needing an e-mail address first!
+Delivery time 💗 💗 💗 💗 The rolling Delta Chat 1.44 releases 
+bring four often requested usability improvements.
+Visit [get.delta.chat](https://get.delta.chat) 
+to onboard and invite anyone, instantly and securely, 
+and without them needing an e-mail address or a phone number first. 
+Some claim there is no other messenger suite today that is as easy to onboard and use. 
+True or not? In any case, we are already busy with preparing 
+next usability improvements to avoid any doubts :) 
 
-## Reactions ❤️  now supported on all platforms 
+## Reactions now supported on all platforms 
 
 ![Select reactions to chat message](../assets/blog/desktop-reactions.png)
 
@@ -28,40 +31,35 @@ for a list of other interoperability specs we are tapping into.
 
 The new Delta Chat 1.44 iOS app features instant message delivery,
 addressing the long-lasting usability issue of 
-"I didn't see your message and had to open the app first!".
+"Damn it, I didn't see your message, only after opening the app first!".
 Note that instant message delivery is currently 
-only available if you are using a chatmail address,
-as provided by three independent entities currently: 
+only available if you are using a [chatmail](http://localhost:4000/en/2023-12-13-chatmail) address,
+available from three independent entities currently: 
 [nine.testrun.org](https://nine.testrun.org),
 [mailchat.pl](https://mailchat.pl) or [mehl.cloud](https://mehl.cloud).
-The new release also improves notification handling for non-chatmail addresses
-but instant notifications are generally not available there. 
 
 
-## New Desktop Multi-account sidebar
+## New Desktop Multi-account sidebar 
 
 ![Desktop multi-account sidebar](../assets/blog/desktop-sidebar.png)
 
-The Desktop apps on all platforms now have a sidebar
-that shows and allows to select all your accounts,
-and eases a direct overview of unread messages in any accounts. 
-System notifications now work for all accounts and you can also mute less important accounts.
-We also fixed many issues, including the Flathub release (which crashed when receiving messages).
+Desktop apps on all platforms now have a sidebar
+that shows and allows to select your accounts directly,
+and gives a direct overview of unread messages in all accounts. 
+System notifications now work for all accounts and you may mute some accounts.
+For friends of Flathub releases: we fixed the annoying "crashing on notification" issue :) 
 
-## Invite links for getting in contact 
+## Sharing invite links for chats and chat groups
 
 <img src="../assets/blog/desktop-invite-link-show.jpg" width="320" />
 
-You can now send invite links via any other messenger 
-or social media DM channel. 
-To create an invite link go to the "QR code" icon 
-and tap "share" to a link you can send via other messengers
-or other private channels.
-If a receiver taps on your invite link Delta chat will automatically activate
-and offer to accept the invite and establish 
-a [guaranteed end-to-end encrypted chat](https://delta.chat/en/2023-11-23-jumbo-42). 
-Of course, you can still use the regular show/scan QR code option
-if you are standing next to each other. 
+You can now send invite links to establish secure contact with anyone. 
+Go to the "QR code" icon on the main screen and tap "share" to send an invite link 
+through any other 3rd party messenging channel. 
+Or go to a chat group profile, tap the "QR invite" option and then "share" the link.
+If a receiver taps on your invite link they will be guided into joining 
+a [guaranteed end-to-end encrypted chat](http://delta.chat/en/2023-11-23-jumbo-42). 
+
 
 ## Privacy preserving statistics on Android 
 
