--- a/_posts/2024-03-12-jumbo44.md
+++ b/_posts/2024-03-12-jumbo44.md
@@ -4,12 +4,13 @@ author: holga, r10s, simon
 image: ../assets/blog/2024-03-notiheart.png
 ---
 
-Delivery time 💗 💗 💗 💗 The rolling Delta Chat 1.44 releases 
+Delivery time!
+The rolling Delta Chat 1.44 releases 
 bring four often requested usability improvements.
 Visit [get.delta.chat](https://get.delta.chat) 
 to onboard and invite anyone, instantly and securely, 
 and without them needing an e-mail address or a phone number first. 
-Some claim there is no other messenger suite today that is as easy to onboard and use. 
+Some claim no other messenger suite today is as easy to onboard and use. 
 True or not? In any case, we are already busy with preparing 
 next usability improvements to avoid any doubts :) 
 
