better statistics section

--- a/_posts/2024-03-12-jumbo44.md
+++ b/_posts/2024-03-12-jumbo44.md
@@ -66,17 +66,16 @@ a [guaranteed end-to-end encrypted chat](http://delta.chat/en/2023-11-23-jumbo-4
 
 ![Submit encryption statistics to developers](../assets/blog/self-reporting-statistics.jpg)
 
-Android allows to send statistics to developers in order to ensure
-we weed out and prevent unneccessary "failed to decrypt" style messages. 
-We want guaranteed end-to-end encryption to reliably work 
-and not cause any troubles also with multi-device usage. 
-Please help by going to "Advanced Settings" and then 
-"Send statistics to Delta Chat's developers".
-Statistics are generated as a text message which you may review and send yourself 
-to the [collection bot](https://github.com/deltachat/self_reporting_bot/blob/main/self_reporting_bot.py) using guaranteed end-to-end encryption. 
-No personally identifable data is kept because 
-the collection bot removes the statistics message 
-and thereby the relation to your e-mail address. 
+Android allows to send statistics to help Delta Chat developers 
+weed out any remaining issues to make guaranteed end-to-end encryption
+a 100% reliable and secure experience, also across your devices. 
+You may help by going to "Advanced Settings" and 
+"Send statistics to Delta Chat's developers"
+which generates a text message that you can tap to send 
+to the [collection bot](https://github.com/deltachat/self_reporting_bot/blob/main/self_reporting_bot.py), of course with guaranteed end-to-end encryption.
+Rest assured, no personally identifable data is collected as
+the collection bot immediately detaches the report from your sender address
+and sends you a "Thanks" message. 
 
 ## Ubuntu Touch also supports reactions and uses latest Rust core library
 
