--- a/_posts/2024-03-12-jumbo44.md
+++ b/_posts/2024-03-12-jumbo44.md
@@ -68,7 +68,7 @@ a [guaranteed end-to-end encrypted chat](http://delta.chat/en/2023-11-23-jumbo-4
 
 Android allows to send statistics to help Delta Chat developers 
 weed out any remaining issues to make guaranteed end-to-end encryption
-a 100% reliable and secure experience, also across your devices. 
+a 100% reliable and secure experience, across all your devices. 
 You may help by going to "Advanced Settings" and 
 "Send statistics to Delta Chat's developers"
 which generates a text message that you can tap to send 
