adding all release contributors as authors :)

--- a/_posts/2024-03-12-jumbo44.md
+++ b/_posts/2024-03-12-jumbo44.md
@@ -1,6 +1,6 @@
 ---
 title: Four major usability improvements in Delta Chat 1.44 
-author: holga, r10s, simon
+author: holga, r10s, simon, link2xt, xenia, adz, zeitschlag, nami, iequidoo
 image: ../assets/blog/2024-03-notiheart.png
 ---
 
