set com_id for latest blog post

--- a/_posts/2024-03-12-jumbo44.md
+++ b/_posts/2024-03-12-jumbo44.md
@@ -2,6 +2,7 @@
 title: Four major usability improvements in Delta Chat 1.44 
 author: holga, r10s, simon, link2xt, xenia, adz, zeitschlag, nami, iequidoo, adb, hagi
 image: ../assets/blog/2024-03-notiheart.png
+com_id: 112084571969847132
 ---
 
 Delivery time!
