fix typos and CHANGLOG links

--- a/_posts/2024-03-12-jumbo44.md
+++ b/_posts/2024-03-12-jumbo44.md
@@ -57,7 +57,7 @@ For friends of Flathub releases: we fixed the annoying "crashing on notification
 
 You can now send invite links to establish secure contact with anyone. 
 Go to the "QR code" icon on the main screen and tap "share" to send an invite link 
-through any other 3rd party messenging channel. 
+through any other 3rd party messaging channel.
 Or go to a chat group profile, tap the "QR invite" option and then "share" the link.
 If a receiver taps on your invite link they will be guided into joining 
 a [guaranteed end-to-end encrypted chat](http://delta.chat/en/2023-11-23-jumbo-42). 
@@ -74,7 +74,7 @@ You may help by going to "Advanced Settings" and
 "Send statistics to Delta Chat's developers"
 which generates a text message that you can tap to send 
 to the [collection bot](https://github.com/deltachat/self_reporting_bot/blob/main/self_reporting_bot.py), of course with guaranteed end-to-end encryption.
-Rest assured, no personally identifable data is collected as
+Rest assured, no personally identifiable data is collected as
 the collection bot immediately detaches the report from your sender address
 and sends you a "Thanks" message. 
 
@@ -103,8 +103,8 @@ of all Delta Chat apps.
 For complete lists of changes see: 
 
 - [Desktop changes](https://github.com/deltachat/deltachat-desktop/blob/master/CHANGELOG.md) 
-- [Android changes](https://github.com/deltachat/deltachat-android/blob/master/CHANGELOG.md) 
-- [iOS changes](https://github.com/deltachat/deltachat-ios/blob/master/CHANGELOG.md) 
+- [Android changes](https://github.com/deltachat/deltachat-android/blob/main/CHANGELOG.md)
+- [iOS changes](https://github.com/deltachat/deltachat-ios/blob/main/CHANGELOG.md)
 - [Core Rust changes](https://github.com/deltachat/deltachat-core-rust/blob/main/CHANGELOG.md) 
 - [Ubuntu Touch changes](https://codeberg.org/lk108/deltatouch/src/branch/main/CHANGELOG)
 
