Fix link to chatmail blog post

--- a/_posts/2024-03-12-jumbo44.md
+++ b/_posts/2024-03-12-jumbo44.md
@@ -35,7 +35,7 @@ The new Delta Chat 1.44 iOS app features instant message delivery,
 addressing the long-lasting usability issue of 
 "Damn it, I didn't see your message, only after opening the app first!".
 Note that instant message delivery is currently 
-only available if you are using a [chatmail](http://localhost:4000/en/2023-12-13-chatmail) address,
+only available if you are using a [chatmail](https://delta.chat/en/2023-12-13-chatmail) address,
 available from three independent entities currently: 
 [nine.testrun.org](https://nine.testrun.org),
 [mailchat.pl](https://mailchat.pl) or [mehl.cloud](https://mehl.cloud).
