making links relative

--- a/_posts/2024-03-12-jumbo44.md
+++ b/_posts/2024-03-12-jumbo44.md
@@ -35,7 +35,7 @@ The new Delta Chat 1.44 iOS app features instant message delivery,
 addressing the long-lasting usability issue of 
 "Damn it, I didn't see your message, only after opening the app first!".
 Note that instant message delivery is currently 
-only available if you are using a [chatmail](https://delta.chat/en/2023-12-13-chatmail) address,
+only available if you are using a [chatmail](../en/2023-12-13-chatmail) address,
 available from three independent entities currently: 
 [nine.testrun.org](https://nine.testrun.org),
 [mailchat.pl](https://mailchat.pl) or [mehl.cloud](https://mehl.cloud).
@@ -60,7 +60,7 @@ Go to the "QR code" icon on the main screen and tap "share" to send an invite li
 through any other 3rd party messaging channel.
 Or go to a chat group profile, tap the "QR invite" option and then "share" the link.
 If a receiver taps on your invite link they will be guided into joining 
-a [guaranteed end-to-end encrypted chat](http://delta.chat/en/2023-11-23-jumbo-42). 
+a [guaranteed end-to-end encrypted chat](../en/2023-11-23-jumbo-42).
 
 
 ## Privacy preserving statistics on Android 
@@ -82,7 +82,7 @@ and sends you a "Thanks" message.
 
 ![Ubuntu touch reactions](../assets/blog/2024-03-11-deltatouch-reactions.png)
 
-[Delta Touch](https://delta.chat/en/2023-07-02-deltatouch) also introduced 
+[Delta Touch](../en/2023-07-02-deltatouch) also introduced
 reactions and uses the latest [Delta Chat core](https://github.com/deltachat/deltachat-core-rust/) that underlies the networking, encryption, contact and chat management 
 of all Delta Chat apps. 
 
