--- a/_data/lang/en.yaml
+++ b/_data/lang/en.yaml
@@ -28,6 +28,7 @@ en:
     add_friends: Enter a Username and Meet Your Friends
     add_friends_explanation: Now you can enter a username, select a profile picture, and chat with your friends. Meet and verify them by <a href="help#howtoe2ee">scanning QR codes</a> or <a href="../en/2024-03-12-jumbo44#sharing-invite-links-for-chats-and-chat-groups">send them an invite link</a>.
     other: Download options for other platforms
+    no_upgrades: Download options without automatic updates
     source_code: Source Code
     install_via_packagemanager: Install via Package Manager
     outdated: outdated
