--- a/_data/lang/uk.yml
+++ b/_data/lang/uk.yml
@@ -28,6 +28,7 @@ uk:
     add_friends: Введіть ім'я користувача та познайомтеся з друзями
     add_friends_explanation: "Тепер ви можете ввести ім'я користувача, вибрати фотографію профілю та спілкуватися з друзями. Найкращий спосіб - познайомитися з ними та верифікувати їх за допомогою <a href=\"help#howtoe2ee\">, відсканувавши QR-коди</a>."
     other: Варіанти завантаження для інших платформ
+    no_upgrades: ""
     source_code: Вихідний код
     install_via_packagemanager: Інсталювати через пакетний менеджер
     outdated: застаріло
