--- a/_data/lang/zh_CN.yml
+++ b/_data/lang/zh_CN.yml
@@ -28,6 +28,7 @@ zh_CN:
     add_friends: ""
     add_friends_explanation: ""
     other: ""
+    no_upgrades: ""
     source_code: 源代码
     install_via_packagemanager: 通过包管理器安装
     outdated: 过时的
