--- a/_data/lang/ca.yml
+++ b/_data/lang/ca.yml
@@ -28,6 +28,7 @@ ca:
     add_friends: ""
     add_friends_explanation: ""
     other: ""
+    no_upgrades: ""
     source_code: Codi font
     install_via_packagemanager: Instal·la'l via Gestor de Paquets
     outdated: desactualitzat
