--- a/_data/lang/cs.yml
+++ b/_data/lang/cs.yml
@@ -28,6 +28,7 @@ cs:
     add_friends: ""
     add_friends_explanation: ""
     other: ""
+    no_upgrades: ""
     source_code: Zdrojový kód
     install_via_packagemanager: Instalace ze správce balíčků
     outdated: zastaralé
