--- a/_data/lang/fr.yml
+++ b/_data/lang/fr.yml
@@ -28,6 +28,7 @@ fr:
     add_friends: ""
     add_friends_explanation: ""
     other: ""
+    no_upgrades: ""
     source_code: Code source
     install_via_packagemanager: Installation via le gestionnaire de paquets
     outdated: dépassé
