--- a/_data/lang/gl.yml
+++ b/_data/lang/gl.yml
@@ -28,6 +28,7 @@ gl:
     add_friends: ""
     add_friends_explanation: ""
     other: ""
+    no_upgrades: ""
     source_code: Código Fonte
     install_via_packagemanager: Instalar vía Xestor de Paquetes
     outdated: antigo
