--- a/_data/lang/id.yml
+++ b/_data/lang/id.yml
@@ -28,6 +28,7 @@ id:
     add_friends: ""
     add_friends_explanation: ""
     other: ""
+    no_upgrades: ""
     source_code: Source Code
     install_via_packagemanager: Instal melalui Package Manager
     outdated: ketinggalan jaman
