--- a/_data/lang/pt_BR.yml
+++ b/_data/lang/pt_BR.yml
@@ -28,6 +28,7 @@ pt_BR:
     add_friends: ""
     add_friends_explanation: ""
     other: ""
+    no_upgrades: ""
     source_code: Source Code
     install_via_packagemanager: Install via Package Manager
     outdated: outdated
