--- a/_data/lang/ru.yml
+++ b/_data/lang/ru.yml
@@ -28,6 +28,7 @@ ru:
     add_friends: ""
     add_friends_explanation: ""
     other: ""
+    no_upgrades: ""
     source_code: Исходный код
     install_via_packagemanager: Установка через Диспетчер пакетов
     outdated: устаревшее
