--- a/_data/lang/sk.yml
+++ b/_data/lang/sk.yml
@@ -28,6 +28,7 @@ sk:
     add_friends: ""
     add_friends_explanation: ""
     other: ""
+    no_upgrades: ""
     source_code: "Zdrojový kód "
     install_via_packagemanager: Nainštalujte pomocou Package Manager
     outdated: zastarané
