--- a/_data/lang/tr.yml
+++ b/_data/lang/tr.yml
@@ -28,6 +28,7 @@ tr:
     add_friends: ""
     add_friends_explanation: ""
     other: ""
+    no_upgrades: ""
     source_code: Kaynak Kodu
     install_via_packagemanager: Paket Yöneticisi Yoluyla Kur
     outdated: eski
