--- a/_data/lang/nl.yml
+++ b/_data/lang/nl.yml
@@ -28,7 +28,7 @@ nl:
     add_friends: Voer een gebruikersnaam in en communiceer met je vrienden
     add_friends_explanation: Nu kun je een gebruikersnaam en profielfoto kiezen. Daarna kun je communiceren met je vrienden door met ze af te spreken en ze goed te keuren met behulp van hun <a href="help#howtoe2ee">QR-codes</a>.
     other: Downloadopties voor andere systemen
-    no_upgrades: ""
+    no_upgrades: Downloadopties zonder automatische updates
     source_code: Broncode
     install_via_packagemanager: Installeren via pakketbeheerder
     outdated: verouderd
